# SIKE

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  ImpZeff.py  README.md  SIKE.py  SIKE_tools.py  analysis.ipynb  atomic_state.py  demo.ipynb  impurity.py  input.py  install_atomic_data.py  matrix_utils.py  output.py  plan.txt  plotting.py  post_processing.py  pyproject.toml  rates.py  requirements.txt  setup.py  sike_plotting.py  solver.py  tools.py  transition.py  validation.ipynb
.github/workflows/: lint.yml  tests.yml
FAC scripts/: create_element.py  fac_data_processing.ipynb  input_fac.py
analysis_notebooks/: ADAS_comparison.ipynb  analysis.ipynb  testing.ipynb
benchmarking/: benchmarking.ipynb
demo/: demo.ipynb
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/: custom-class-template.rst
imp_data/Argon/Ar01_LANLdata/: dwilev.Ar01  struct.Ar01
imp_data/Carbon/: nifs_ex_cs.txt  nist_spontem.txt  states.txt  states_groundonly.txt  states_gsonly.txt  sunokato_ex_cs.txt  sunokato_iz_cs.txt  transitions.txt  transitions_gsradrec.txt
imp_data/Neon/: states.txt  transitions.txt
imp_data/Tungsten/: W5+->W6+.ps
notebooks/: demo.ipynb  testing.ipynb
scripts/: extract_FLYCHK_data.py  fac_data_processing.ipynb  get_atomic_data.py  input_fac.py  sike_setup.py  testing.py
sike/: SIKE.py  SIKE_plotting.py  SIKE_tools.py  atomic_state.py  constants.py  core.py  impurity.py  matrix_utils.py  physics_tools.py  post_processing.py  pyproject.toml  setup.py  solver.py  transition.py
sike/src/sike/: __init__.py  core.py  impurity.py  matrix_utils.py  solver.py  transition.py
sike_atomic_data/Testium/: T_levels_n.json
src/sike/: __init__.py  atomic_state.py  constants.py  core.py  impurity.py  impurity_utils.py  matrix_utils.py  plasma_utils.py  plotting.py  post_processing.py  setup.py  transition.py
src/sike/analysis/: analysis.py  generate_output.py  impurity_utils.py  plasma_utils.py  plotting.py  post_processing.py
src/sike/analysis/tests/: test_plasma_utils.py
src/sike/atomics/: atomic_state.py  impurity.py  transition.py
src/sike/io/: generate_output.py
src/sike/solver/: __init__.py  matrix_utils.py  solver.py
src/sike/tests/: test_plasma_utils.py
src/sike/tests/data/: example_states.json
src/sike/utils/: constants.py  setup.py
tests/: test_integrated.py  test_plasma_utils.py
tests/__snapshots__/: test_integrated.ambr
tests/data/Testium/: T_transitions_n.json
