[build-system]
requires = ["setuptools >= 61.0",
    "setuptools_scm[toml] >= 6.2",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sike"
authors = [
    {name = "Dominic Power", email = "power8@llnl.gov"}
]
description = "Scrape-off Layer Impurities with Kinetic Electrons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "requests",
    "numba>=0.60",
    "xarray",
    "matplotlib",
    "typing-extensions>=4.14.0",
    "syrupy>=4.9.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis"
]

[tool.setuptools_scm]
