[build-system]
requires = ["setuptools >= 61.0",
    "setuptools_scm[toml] >= 6.2",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sike"
authors = [
    {name = "Dominic Power", email = "power8@llnl.gov"}
]
description = "Scrape-off Layer Impurities with Kinetic Electrons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "requests",
    "numba>=0.60",
    "xarray",
    "matplotlib",
    "typing-extensions>=4.14.0",
    "syrupy>=4.9.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis"
]

[tool.setuptools_scm]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
ignore = [
  "PLR2004", # magic-comparison
  "B9",      # flake8-bugbear opinionated warnings
]