[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sike"
authors = [
    {name = "Dominic Power", email = "power8@llnl.gov"}
]
description = "Scrape-off Layer Impurities with Kinetic Electrons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "scipy>=1.14", "requests", "numba>=0.60"]

version = "0.1"
